ajout de la section main

--- a/index.html
+++ b/index.html
@@ -21,3 +21,11 @@
                 </form>
             </div>
         </header>
+
+        <main>
+            <div id="bloc_main">
+                <h2>Réservez le menu qui vous convient</h2>
+                <p id="bloc_main_description">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                <a href="#"><p>Explorer nos restaurants</p></a>
+            </div>
+        </main>
