ajout de la section fonctionnement

--- a/index.html
+++ b/index.html
@@ -29,3 +29,16 @@
                 <a href="#"><p>Explorer nos restaurants</p></a>
             </div>
         </main>
+
+        <section>
+            <div id="section_fonctionnement">
+                <h2>Fonctionnement</h2>
+                <nav>
+                    <ul>
+                        <a href="#"><li><i class="fa-solid fa-1"></i><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
+                        <li><i class="fa-solid fa-2"></i><i class="fa-solid fa-list"></i>Composez votre menu</li>
+                        <li><i class="fa-solid fa-3"></i><i class="fa-solid fa-store"></i>Dégustez au restaurant</li></a>
+                    </ul>
+                </nav>
+            </div>
+        </section>
