--- a/index.html
+++ b/index.html
@@ -42,3 +42,45 @@
                 </nav>
             </div>
         </section>
+
+        <section>
+            <div id="section_restaurant">
+                <h2>Restaurants</h2>
+                <div id="section_restaurant_1_2">
+                    <figure id="restaurant_1">
+                        <a href="/restaurants/La pelette du goût/La pelette du goût.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                        <figcaption>
+                            <h3>La pelette du goût</h3>
+                            <p>Ménilmontant</p>
+                            <i class="fa-regular fa-heart"></i>
+                        </figcaption></a>
+                    </figure>
+                    <figure id="restaurant_2">
+                        <a href="/restaurants/La note enchantée/La note enchantée.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                        <figcaption>
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
+                            <i class="fa-regular fa-heart"></i>
+                        </figcaption></a>
+                    </figure>
+                </div>
+                <div id="section_restaurant_3_4">
+                    <figure id="restaurant_3">
+                        <a href="/restaurants/A la française/A la française.html"><img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                        <figcaption>
+                            <h3>A la française</h3>
+                            <p>Cité Rouge</p>
+                            <i class="fa-regular fa-heart"></i>
+                        </figcaption></a>
+                    </figure>
+                    <figure id="restaurant_4">
+                        <a href="/restaurants/Le délice des sens/Le délice des sens.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                        <figcaption>
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                            <i class="fa-regular fa-heart"></i>
+                        </figcaption></a>
+                    </figure>
+                </div>
+            </div>
+        </section>
