ajout de la section footer

--- a/index.html
+++ b/index.html
@@ -84,3 +84,20 @@
                 </div>
             </div>
         </section>
+
+        <footer>
+            <div id="bloc_footer">
+                <div>
+                    <h3>ohmyfood</h3>
+                </div>
+                <ul>
+                    <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+                    <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+                    <li>Mentions légales</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </footer>
+
+    </body>
+</html>
