--- a/html/index.html
+++ b/html/index.html
@@ -6,14 +6,14 @@
         <script src="https://kit.fontawesome.com/879b5d66e9.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
         <title>ohmyfood</title>
     </head>
 
     <body>
         <header>
             <div id="logo_header">
-                <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
+                <img src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
             </div>
             <div id="barre_de_recherche">
                 <form method="post" action="#">
@@ -48,7 +48,9 @@
                 <h2>Restaurants</h2>
                 <div id="section_restaurant_1_2">
                     <figure id="restaurant_1">
-                        <a href="/restaurants/La pelette du goût/La pelette du goût.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                        <a href="/html/pelette du goût/La pelette du goût.html">
+                        <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                        <p class="nouveau">Nouveau</p>
                         <figcaption>
                             <h3>La pelette du goût</h3>
                             <p>Ménilmontant</p>
@@ -56,7 +58,9 @@
                         </figcaption></a>
                     </figure>
                     <figure id="restaurant_2">
-                        <a href="/restaurants/La note enchantée/La note enchantée.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                        <a href="/restaurants/La note enchantée/La note enchantée.html">
+                        <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                        <p class="nouveau">Nouveau</p>
                         <figcaption>
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
@@ -66,7 +70,8 @@
                 </div>
                 <div id="section_restaurant_3_4">
                     <figure id="restaurant_3">
-                        <a href="/restaurants/A la française/A la française.html"><img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                        <a href="/restaurants/A la française/A la française.html">
+                        <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                         <figcaption>
                             <h3>A la française</h3>
                             <p>Cité Rouge</p>
@@ -74,7 +79,8 @@
                         </figcaption></a>
                     </figure>
                     <figure id="restaurant_4">
-                        <a href="/restaurants/Le délice des sens/Le délice des sens.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                        <a href="/restaurants/Le délice des sens/Le délice des sens.html">
+                        <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                         <figcaption>
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
