--- a/html/index.html
+++ b/html/index.html
@@ -48,7 +48,7 @@
                 <h2>Restaurants</h2>
                 <div id="section_restaurant_1_2">
                     <figure id="restaurant_1">
-                        <a href="/html/pelette du goût/La pelette du goût.html">
+                        <a href="La pelette du goût.html">
                         <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                         <p class="nouveau">Nouveau</p>
                         <figcaption>
@@ -58,7 +58,7 @@
                         </figcaption></a>
                     </figure>
                     <figure id="restaurant_2">
-                        <a href="/restaurants/La note enchantée/La note enchantée.html">
+                        <a href="La note enchantée.html">
                         <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                         <p class="nouveau">Nouveau</p>
                         <figcaption>
@@ -70,7 +70,7 @@
                 </div>
                 <div id="section_restaurant_3_4">
                     <figure id="restaurant_3">
-                        <a href="/restaurants/A la française/A la française.html">
+                        <a href="A la française.html">
                         <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                         <figcaption>
                             <h3>A la française</h3>
@@ -79,7 +79,7 @@
                         </figcaption></a>
                     </figure>
                     <figure id="restaurant_4">
-                        <a href="/restaurants/Le délice des sens/Le délice des sens.html">
+                        <a href="Le délice des sens.html">
                         <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                         <figcaption>
                             <h3>Le délice des sens</h3>
@@ -100,7 +100,7 @@
                     <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
                     <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
                     <li>Mentions légales</li>
-                    <li>Contact</li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
         </footer>
