modification du header dans les menus

--- a/html/La pelette du goût.html
+++ b/html/La pelette du goût.html
@@ -6,7 +6,7 @@
         <script src="https://kit.fontawesome.com/879b5d66e9.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/css/styles_restaurants.css">
         <title>La pelette du goût</title>
     </head>
 
