ajout du bouton commander

--- a/html/A la française.html
+++ b/html/A la française.html
@@ -18,13 +18,13 @@
         </header>
 
         <section>
-            <div id="carte_menu">
+            <figure id="carte_menu">
                 <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
-                <div id="menu">
+                <figcaption id="menu">
                     <div id="nom_restaurant">
                         <h1>A la française</h1><i class="fa-regular fa-heart"></i>
                     </div>
-                    <div>
+                    <div id="entrees">
                         <h2 class="repas">entrées</h2>
                         <div class="assiette">
                             <h3>Tartare de poulpe acidulé</h3>
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div id="plats">
                         <h2 class="repas">plats</h2>
                         <div class="assiette">
                             <h3>Coquilles Saint-Jacques</h3>
@@ -72,7 +72,7 @@
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div id="desserts">
                         <h2 class="repas">desserts</h2>
                         <div class="assiette">
                             <h3>Pétales de violettes glacés</h3>
@@ -99,9 +99,8 @@
                     <div id="bouton_commander">
                         <button>Commander</button>
                     </div>
-                    
-                </div>
-            </div>
+                </figcaption>
+            </figure>
         </section>
 
         <footer>
