--- a/html/La note enchantée.html
+++ b/html/La note enchantée.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/styles_restaurants.css">
-        <title>A la française</title>
+        <title>La note enchantée</title>
     </head>
 
     <body>
