ajout du menu Le délice des sens

--- a/html/index.html
+++ b/html/index.html
@@ -48,11 +48,11 @@
                 <h2>Restaurants</h2>
                 <div id="section_restaurant_1_2">
                     <figure id="restaurant_1">
-                        <a href="La pelette du goût.html">
+                        <a href="La palette du goût.html">
                         <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                         <p class="nouveau">Nouveau</p>
                         <figcaption>
-                            <h3>La pelette du goût</h3>
+                            <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
                             <i class="fa-regular fa-heart"></i>
                         </figcaption></a>
