--- a/html/La palette du goût.html
+++ b/html/La palette du goût.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/styles_restaurants.css">
-        <title>La pelette du goût</title>
+        <title>La palette du goût</title>
     </head>
 
     <body>
@@ -19,10 +19,10 @@
 
         <section>
             <figure id="carte_menu">
-                <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La pelette du goût">
+                <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                 <figcaption id="menu">
                     <div id="nom_restaurant">
-                        <h1>La pelette du goût</h1><i class="fa-regular fa-heart"></i>
+                        <h1>La palette du goût</h1><i class="fa-regular fa-heart"></i>
                     </div>
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
