--- a/html/Le délice des sens.html
+++ b/html/Le délice des sens.html
@@ -13,12 +13,94 @@
     <body>
         <header>
             <div id="logo_header">
-                <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
+                <a href="index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a><img src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
             </div>
         </header>
 
         <section>
-            
+            <figure id="carte_menu">
+                <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                <figcaption id="menu">
+                    <div id="nom_restaurant">
+                        <h1>A la française</h1><i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div id="entrees">
+                        <h2 class="repas">entrées</h2>
+                        <div class="assiette">
+                            <h3>Tartare de poulpe acidulé</h3>
+                            <div class="assiette_description">
+                                <p>Aux zestes d'orange</p>
+                                <p class="prix">25€</p>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <h3>Velouté de légumes d'antan</h3>
+                            <div class="assiette_description">
+                                <p>Carotte, panais, topinambour</p>
+                                <p class="prix">35€</p>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <h3>Soupe à l'oignon</h3>
+                            <div class="assiette_description">
+                                <p>Revisitée</p>
+                                <p class="prix">20€</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="plats">
+                        <h2 class="repas">plats</h2>
+                        <div class="assiette">
+                            <h3>Coquilles Saint-Jacques</h3>
+                            <div class="assiette_description">
+                                <p>Accompagnées d'une purée de panais</p>
+                                <p class="prix">40€</p>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <h3>Magret de canard</h3>
+                            <div class="assiette_description">
+                                <p>Et parmentier de pommes de terre</p>
+                                <p class="prix">35€</p>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                            <div class="assiette_description">
+                                <p>Sur son lit de gnocchis aux légumes</p>
+                                <p class="prix">44€</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="desserts">
+                        <h2 class="repas">desserts</h2>
+                        <div class="assiette">
+                            <h3>Pétales de violettes glacés</h3>
+                            <div class="assiette_description">
+                                <p>Et purée de noisettes</p>
+                                <p class="prix">18€</p>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <h3>Fondant au chocolat</h3>
+                            <div class="assiette_description">
+                                <p>Revisité</p>
+                                <p class="prix">22€</p>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <h3>Millefeuille croustillant</h3>
+                            <div class="assiette_description">
+                                <p>Myrtilles et pâte d’amande</p>
+                                <p class="prix">23€</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="bouton_commander">
+                        <button>Commander</button>
+                    </div>
+                </figcaption>
+            </figure>
         </section>
 
         <footer>
@@ -30,7 +112,7 @@
                     <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
                     <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
                     <li>Mentions légales</li>
-                    <li>Contact</li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
         </footer>
