ajout du menu A la francaise et modification de la carte La palette du gout

--- a/html/A la française.html
+++ b/html/A la française.html
@@ -22,7 +22,7 @@
                 <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                 <figcaption id="menu">
                     <div id="nom_restaurant">
-                        <h1>A la française</h1><i class="fa-regular fa-heart"></i>
+                        <h1>À la française</h1><i class="fa-regular fa-heart"></i>
                     </div>
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
