--- a/html/La palette du goût.html
+++ b/html/La palette du goût.html
@@ -27,23 +27,23 @@
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
                         <div class="assiette">
-                            <h3>Tartare de poulpe acidulé</h3>
+                            <h3>Fricassée d'escargot</h3>
                             <div class="assiette_description">
-                                <p>Aux zestes d'orange</p>
+                                <p>Au piment d'Espelette</p>
                                 <p class="prix">25€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Velouté de légumes d'antan</h3>
+                            <h3>Foie gras de canard mi-cuit</h3>
                             <div class="assiette_description">
-                                <p>Carotte, panais, topinambour</p>
+                                <p>Et ses copeaux de truffe noire</p>
                                 <p class="prix">35€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Soupe à l'oignon</h3>
+                            <h3>Œuf au plat</h3>
                             <div class="assiette_description">
-                                <p>Revisitée</p>
+                                <p>Assaisonné à la truffe sur lit de caviar</p>
                                 <p class="prix">20€</p>
                             </div>
                         </div>
@@ -51,23 +51,23 @@
                     <div id="plats">
                         <h2 class="repas">plats</h2>
                         <div class="assiette">
-                            <h3>Coquilles Saint-Jacques</h3>
+                            <h3>Filet de boeuf aux herbes</h3>
                             <div class="assiette_description">
-                                <p>Accompagnées d'une purée de panais</p>
+                                <p>Accompagné de sa ribambelle de légumes</p>
                                 <p class="prix">40€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Magret de canard</h3>
+                            <h3>Parmentier de queue de boeuf</h3>
                             <div class="assiette_description">
-                                <p>Et parmentier de pommes de terre</p>
+                                <p>À la truffe noire sur sa purée de panais</p>
                                 <p class="prix">35€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                            <h3>Filet de turbot</h3>
                             <div class="assiette_description">
-                                <p>Sur son lit de gnocchis aux légumes</p>
+                                <p>Aux agrumes</p>
                                 <p class="prix">44€</p>
                             </div>
                         </div>
@@ -75,23 +75,23 @@
                     <div id="desserts">
                         <h2 class="repas">desserts</h2>
                         <div class="assiette">
-                            <h3>Pétales de violettes glacés</h3>
+                            <h3>Paris-Brest</h3>
                             <div class="assiette_description">
-                                <p>Et purée de noisettes</p>
+                                <p>Revisité</p>
                                 <p class="prix">18€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Fondant au chocolat</h3>
+                            <h3>Macaron au chocolat d'exception</h3>
                             <div class="assiette_description">
-                                <p>Revisité</p>
+                                <p>Et glace à la vanille de Madagascar</p>
                                 <p class="prix">22€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Millefeuille croustillant</h3>
+                            <h3>Mousse au chocolat</h3>
                             <div class="assiette_description">
-                                <p>Myrtilles et pâte d’amande</p>
+                                <p>Au piment d'Espelette et à la truffe noire</p>
                                 <p class="prix">23€</p>
                             </div>
                         </div>
