--- a/html/Le délice des sens.html
+++ b/html/Le délice des sens.html
@@ -22,28 +22,28 @@
                 <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                 <figcaption id="menu">
                     <div id="nom_restaurant">
-                        <h1>A la française</h1><i class="fa-regular fa-heart"></i>
+                        <h1>Le délice des sens</h1><i class="fa-regular fa-heart"></i>
                     </div>
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
                         <div class="assiette">
-                            <h3>Tartare de poulpe acidulé</h3>
+                            <h3>Tartare de thon</h3>
                             <div class="assiette_description">
-                                <p>Aux zestes d'orange</p>
+                                <p>Assaisonné au yuzu</p>
                                 <p class="prix">25€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Velouté de légumes d'antan</h3>
+                            <h3>Bouchée de homard croustillant</h3>
                             <div class="assiette_description">
-                                <p>Carotte, panais, topinambour</p>
+                                <p>Et sa farandole de petits légumes</p>
                                 <p class="prix">35€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Soupe à l'oignon</h3>
+                            <h3>Velouté de cèpes</h3>
                             <div class="assiette_description">
-                                <p>Revisitée</p>
+                                <p>Aux truffes</p>
                                 <p class="prix">20€</p>
                             </div>
                         </div>
@@ -51,23 +51,23 @@
                     <div id="plats">
                         <h2 class="repas">plats</h2>
                         <div class="assiette">
-                            <h3>Coquilles Saint-Jacques</h3>
+                            <h3>Poulet rôti aux herbes de Provence</h3>
                             <div class="assiette_description">
-                                <p>Accompagnées d'une purée de panais</p>
+                                <p>Et sa crème de truffe</p>
                                 <p class="prix">40€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Magret de canard</h3>
+                            <h3>Langouste rôtie</h3>
                             <div class="assiette_description">
-                                <p>Et parmentier de pommes de terre</p>
+                                <p>Et ses légumes de saison</p>
                                 <p class="prix">35€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                            <h3>Côte de boeuf Angus</h3>
                             <div class="assiette_description">
-                                <p>Sur son lit de gnocchis aux légumes</p>
+                                <p>Et sa purée de panais</p>
                                 <p class="prix">44€</p>
                             </div>
                         </div>
@@ -75,23 +75,23 @@
                     <div id="desserts">
                         <h2 class="repas">desserts</h2>
                         <div class="assiette">
-                            <h3>Pétales de violettes glacés</h3>
+                            <h3>Farandole de desserts</h3>
                             <div class="assiette_description">
-                                <p>Et purée de noisettes</p>
+                                <p>Du chef</p>
                                 <p class="prix">18€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Fondant au chocolat</h3>
+                            <h3>Crème brulée</h3>
                             <div class="assiette_description">
-                                <p>Revisité</p>
+                                <p>Revisitée</p>
                                 <p class="prix">22€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Millefeuille croustillant</h3>
+                            <h3>Tiramisu</h3>
                             <div class="assiette_description">
-                                <p>Myrtilles et pâte d’amande</p>
+                                <p>À la noisette</p>
                                 <p class="prix">23€</p>
                             </div>
                         </div>
