--- a/html/La note enchantée.html
+++ b/html/La note enchantée.html
@@ -27,47 +27,54 @@
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
                         <div class="assiette">
-                            <h3>Tartare de poulpe acidulé</h3>
+                            <h3>Ravioles de foie gras</h3>
                             <div class="assiette_description">
-                                <p>Aux zestes d'orange</p>
+                                <p>Accompagnés de leur crème à la truffe</p>
                                 <p class="prix">25€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Velouté de légumes d'antan</h3>
+                            <h3>Caviar osciètre</h3>
                             <div class="assiette_description">
-                                <p>Carotte, panais, topinambour</p>
+                                <p>Sur blini à la farine de blé noir</p>
                                 <p class="prix">35€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Soupe à l'oignon</h3>
+                            <h3>Homard et espuma de potiron</h3>
                             <div class="assiette_description">
-                                <p>Revisitée</p>
+                                <p>Mariné aux zestes d'orange</p>
                                 <p class="prix">20€</p>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <div class="assiette_description">
+                                <p>Confiture de figue et pain toasté</p>
+                                <p class="prix">35€</p>
                             </div>
                         </div>
                     </div>
                     <div id="plats">
                         <h2 class="repas">plats</h2>
                         <div class="assiette">
-                            <h3>Coquilles Saint-Jacques</h3>
+                            <h3>Noix de coquilles Saint-Jacques</h3>
                             <div class="assiette_description">
-                                <p>Accompagnées d'une purée de panais</p>
+                                <p>Sur lit de purée de céleri-rave</p>
                                 <p class="prix">40€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Magret de canard</h3>
+                            <h3>Langoustine poêlée</h3>
                             <div class="assiette_description">
-                                <p>Et parmentier de pommes de terre</p>
+                                <p>Purée de patate douce</p>
                                 <p class="prix">35€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                            <h3>Mijoté de queue de boeuf</h3>
                             <div class="assiette_description">
-                                <p>Sur son lit de gnocchis aux légumes</p>
+                                <p>Et riz sauvage aux zestes de citron</p>
                                 <p class="prix">44€</p>
                             </div>
                         </div>
@@ -75,23 +82,23 @@
                     <div id="desserts">
                         <h2 class="repas">desserts</h2>
                         <div class="assiette">
-                            <h3>Pétales de violettes glacés</h3>
+                            <h3>Macaron noisette et chocolat</h3>
                             <div class="assiette_description">
-                                <p>Et purée de noisettes</p>
+                                <p>Glace au caramel brun et sel de Guérande</p>
                                 <p class="prix">18€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Fondant au chocolat</h3>
+                            <h3>Baba au rhum revisité</h3>
                             <div class="assiette_description">
-                                <p>Revisité</p>
+                                <p>Avec son coulis de citron</p>
                                 <p class="prix">22€</p>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Millefeuille croustillant</h3>
+                            <h3>Tarte au citron meringuée</h3>
                             <div class="assiette_description">
-                                <p>Myrtilles et pâte d’amande</p>
+                                <p>Déstructurée</p>
                                 <p class="prix">23€</p>
                             </div>
                         </div>
