ajout du lien sur le bouton commander dans les menus

--- a/html/A la française.html
+++ b/html/A la française.html
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div id="bouton_commander">
-                        <button>Commander</button>
+                        <a href="#"><p>Commander</p></a>
                     </div>
                 </figcaption>
             </figure>
