--- a/html/La palette du goût.html
+++ b/html/La palette du goût.html
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div id="bouton_commander">
-                        <button>Commander</button>
+                        <a href="#"><p>Commander</p></a>
                     </div>
                 </figcaption>
             </figure>
