ajout de l'animation sur le coeur

--- a/html/index.html
+++ b/html/index.html
@@ -35,9 +35,9 @@
                 <h2>Fonctionnement</h2>
                 <nav>
                     <ul>
-                        <a href="#"><li><i class="fa-solid fa-1"></i><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
-                        <li><i class="fa-solid fa-2"></i><i class="fa-solid fa-list"></i>Composez votre menu</li>
-                        <li><i class="fa-solid fa-3"></i><i class="fa-solid fa-store"></i>Dégustez au restaurant</li></a>
+                        <a href="#"><li><i class="fa-solid fa-1"></i><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li></a>
+                        <a href="#"><li><i class="fa-solid fa-2"></i><i class="fa-solid fa-list"></i>Composez votre menu</li></a>
+                        <a href="#"><li><i class="fa-solid fa-3"></i><i class="fa-solid fa-store"></i>Dégustez au restaurant</li></a>
                     </ul>
                 </nav>
             </div>
@@ -53,9 +53,14 @@
                         <p class="nouveau">Nouveau</p>
                         <figcaption>
                             <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="descirption_restaurant">
+                                <p>Ménilmontant</p>
+                            </div>
                         </figcaption></a>
+                        <div class="coeur">
+                            <i class="fa-regular fa-heart contour"></i>
+                            <i class="fa-solid fa-heart plein"></i>
+                        </div>
                     </figure>
                     <figure id="restaurant_2">
                         <a href="La note enchantée.html">
@@ -63,9 +68,14 @@
                         <p class="nouveau">Nouveau</p>
                         <figcaption>
                             <h3>La note enchantée</h3>
-                            <p>Charonne</p>
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="descirption_restaurant">
+                                <p>Charonne</p>
+                            </div>
                         </figcaption></a>
+                        <div class="coeur">
+                            <i class="fa-regular fa-heart contour"></i>
+                            <i class="fa-solid fa-heart plein"></i>
+                        </div>
                     </figure>
                 </div>
                 <div id="section_restaurant_3_4">
@@ -74,18 +84,28 @@
                         <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                         <figcaption>
                             <h3>A la française</h3>
-                            <p>Cité Rouge</p>
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="descirption_restaurant">
+                                <p>Cité Rouge</p>
+                            </div>
                         </figcaption></a>
+                        <div class="coeur">
+                            <i class="fa-regular fa-heart contour"></i>
+                            <i class="fa-solid fa-heart plein"></i>
+                        </div>
                     </figure>
                     <figure id="restaurant_4">
                         <a href="Le délice des sens.html">
                         <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                         <figcaption>
                             <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt</p>
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="descirption_restaurant">
+                                <p>Folie-Méricourt</p>
+                            </div>
                         </figcaption></a>
+                        <div class="coeur">
+                            <i class="fa-regular fa-heart contour"></i>
+                            <i class="fa-solid fa-heart plein"></i>
+                        </div>
                     </figure>
                 </div>
             </div>
