ajout de l'animation sur le coeur des menus

--- a/html/Le délice des sens.html
+++ b/html/Le délice des sens.html
@@ -18,11 +18,15 @@
         </header>
 
         <section>
-            <figure id="carte_menu">
+            <div id="carte_menu">
                 <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                <figcaption id="menu">
+                <div id="menu">
                     <div id="nom_restaurant">
-                        <h1>Le délice des sens</h1><i class="fa-regular fa-heart"></i>
+                        <h1>Le délice des sens</h1>
+                        <div class="coeur">
+                            <i class="fa-regular fa-heart contour"></i>
+                            <i class="fa-solid fa-heart plein"></i>
+                        </div>
                     </div>
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
@@ -99,8 +103,8 @@
                     <div id="bouton_commander">
                         <a href="#"><p>Commander</p></a>
                     </div>
-                </figcaption>
-            </figure>
+                </div>
+            </div>
         </section>
 
         <footer>
