--- a/html/La note enchantée.html
+++ b/html/La note enchantée.html
@@ -18,11 +18,15 @@
         </header>
 
         <section>
-            <figure id="carte_menu">
+            <div id="carte_menu">
                 <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                <figcaption id="menu">
+                <div id="menu">
                     <div id="nom_restaurant">
-                        <h1>La note enchantée</h1><i class="fa-regular fa-heart"></i>
+                        <h1>La note enchantée</h1>
+                        <div class="coeur">
+                            <i class="fa-regular fa-heart contour"></i>
+                            <i class="fa-solid fa-heart plein"></i>
+                        </div>
                     </div>
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
@@ -106,8 +110,8 @@
                     <div id="bouton_commander">
                         <a href="#"><p>Commander</p></a>
                     </div>
-                </figcaption>
-            </figure>
+                </div>
+            </div>
         </section>
 
         <footer>
