--- a/html/index.html
+++ b/html/index.html
@@ -35,9 +35,9 @@
                 <h2>Fonctionnement</h2>
                 <nav>
                     <ul>
-                        <a href="#"><li><i class="fa-solid fa-1"></i><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li></a>
-                        <a href="#"><li><i class="fa-solid fa-2"></i><i class="fa-solid fa-list"></i>Composez votre menu</li></a>
-                        <a href="#"><li><i class="fa-solid fa-3"></i><i class="fa-solid fa-store"></i>Dégustez au restaurant</li></a>
+                        <a href="#"><li class="choix"><i class="fa-solid fa-1"></i><i class="fa-solid fa-mobile-screen-button choix_icon"></i>Choisissez un restaurant</li></a>
+                        <a href="#"><li class="choix"><i class="fa-solid fa-2"></i><i class="fa-solid fa-list choix_icon"></i>Composez votre menu</li></a>
+                        <a href="#"><li class="choix"><i class="fa-solid fa-3"></i><i class="fa-solid fa-store choix_icon"></i>Dégustez au restaurant</li></a>
                     </ul>
                 </nav>
             </div>
