deplacement de index.html

--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
             </div>
         </section>
 
+        <section class="spinner">
+            <span class="loader loader_quart"></span>
+        </section>
+
         <footer>
             <div id="bloc_footer">
                 <div>
