--- a/html/A la française.html
+++ b/html/A la française.html
@@ -6,20 +6,20 @@
         <script src="https://kit.fontawesome.com/879b5d66e9.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/css/styles_restaurants.css">
+        <link rel="stylesheet" href="../css/styles_restaurants.css">
         <title>A la française</title>
     </head>
 
     <body>
         <header>
             <div id="logo_header">
-                <a href="index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a><img src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
+                <a href="../index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a><img src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
             </div>
         </header>
 
         <section>
             <div id="carte_menu">
-                <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                 <div id="menu">
                     <div id="nom_restaurant">
                         <h1>À la française</h1>
