--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h2>Restaurants</h2>
                 <div id="section_restaurant_1_2">
                     <figure id="restaurant_1">
-                        <a href="La palette du goût.html">
+                        <a href="./html/La palette du goût.html">
                         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                         <p class="nouveau">Nouveau</p>
                         <figcaption>
@@ -63,7 +63,7 @@
                         </div>
                     </figure>
                     <figure id="restaurant_2">
-                        <a href="La note enchantée.html">
+                        <a href="./html/La note enchantée.html">
                         <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                         <p class="nouveau">Nouveau</p>
                         <figcaption>
@@ -80,7 +80,7 @@
                 </div>
                 <div id="section_restaurant_3_4">
                     <figure id="restaurant_3">
-                        <a href="A la française.html">
+                        <a href="./html/A la française.html">
                         <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                         <figcaption>
                             <h3>A la française</h3>
@@ -94,7 +94,7 @@
                         </div>
                     </figure>
                     <figure id="restaurant_4">
-                        <a href="Le délice des sens.html">
+                        <a href="./html/Le délice des sens.html">
                         <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                         <figcaption>
                             <h3>Le délice des sens</h3>
