ajout du loading spinner sur la page d'accueil

--- a/index.html
+++ b/index.html
@@ -111,8 +111,13 @@
             </div>
         </section>
 
-        <section class="spinner">
-            <span class="loader loader_quart"></span>
+        <section id="spinner">
+            <div class="loader">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span class="centre">ohmyfood</span>
+            </div>
         </section>
 
         <footer>
