ajout du check aux menus

--- a/html/La palette du goût.html
+++ b/html/La palette du goût.html
@@ -31,72 +31,117 @@
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
                         <div class="assiette">
-                            <h3>Fricassée d'escargot</h3>
-                            <div class="assiette_description">
-                                <p>Au piment d'Espelette</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Fricassée d'escargot</h3>
+                                    <p>Au piment d'Espelette</p>
+                                </div>
                                 <p class="prix">25€</p>
                             </div>
-                        </div>
-                        <div class="assiette">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <div class="assiette_description">
-                                <p>Et ses copeaux de truffe noire</p>
-                                <p class="prix">35€</p>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Œuf au plat</h3>
-                            <div class="assiette_description">
-                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Foie gras de canard mi-cuit</h3>
+                                    <p>Et ses copeaux de truffe noire</p>
+                                </div>
+                                <p class="prix">35€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Œuf au plat</h3>
+                                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                                </div>
                                 <p class="prix">20€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                     </div>
                     <div id="plats">
                         <h2 class="repas">plats</h2>
                         <div class="assiette">
-                            <h3>Filet de boeuf aux herbes</h3>
-                            <div class="assiette_description">
-                                <p>Accompagné de sa ribambelle de légumes</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Filet de boeuf aux herbes</h3>
+                                    <p>Accompagné de sa ribambelle de légumes</p>
+                                </div>
                                 <p class="prix">40€</p>
                             </div>
-                        </div>
-                        <div class="assiette">
-                            <h3>Parmentier de queue de boeuf</h3>
-                            <div class="assiette_description">
-                                <p>À la truffe noire sur sa purée de panais</p>
-                                <p class="prix">35€</p>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Filet de turbot</h3>
-                            <div class="assiette_description">
-                                <p>Aux agrumes</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Parmentier de queue de boeuf</h3>
+                                    <p>À la truffe noire sur sa purée de panais</p>
+                                </div>
+                                <p class="prix">35€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Filet de turbot</h3>
+                                    <p>Aux agrumes</p>
+                                </div>
                                 <p class="prix">44€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                     </div>
                     <div id="desserts">
                         <h2 class="repas">desserts</h2>
                         <div class="assiette">
-                            <h3>Paris-Brest</h3>
-                            <div class="assiette_description">
-                                <p>Revisité</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Paris-Brest</h3>
+                                    <p>Revisité</p>
+                                </div>
                                 <p class="prix">18€</p>
                             </div>
-                        </div>
-                        <div class="assiette">
-                            <h3>Macaron au chocolat d'exception</h3>
-                            <div class="assiette_description">
-                                <p>Et glace à la vanille de Madagascar</p>
-                                <p class="prix">22€</p>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Mousse au chocolat</h3>
-                            <div class="assiette_description">
-                                <p>Au piment d'Espelette et à la truffe noire</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Macaron au chocolat d'exception</h3>
+                                    <p>Et glace à la vanille de Madagascar</p>
+                                </div>
+                                <p class="prix">22€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Mousse au chocolat</h3>
+                                    <p>Au piment d'Espelette et à la truffe noire</p>
+                                </div>
                                 <p class="prix">23€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                     </div>
