--- a/html/A la française.html
+++ b/html/A la française.html
@@ -31,72 +31,117 @@
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
                         <div class="assiette">
-                            <h3>Tartare de poulpe acidulé</h3>
-                            <div class="assiette_description">
-                                <p>Aux zestes d'orange</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Tartare de poulpe acidulé</h3>
+                                    <p>Aux zestes d'orange</p>
+                                </div>
                                 <p class="prix">25€</p>
                             </div>
-                        </div>
-                        <div class="assiette">
-                            <h3>Velouté de légumes d'antan</h3>
-                            <div class="assiette_description">
-                                <p>Carotte, panais, topinambour</p>
-                                <p class="prix">35€</p>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Soupe à l'oignon</h3>
-                            <div class="assiette_description">
-                                <p>Revisitée</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Velouté de légumes d'antan</h3>
+                                    <p>Carotte, panais, topinambour</p>
+                                </div>
+                                <p class="prix">35€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Soupe à l'oignon</h3>
+                                    <p>Revisitée</p>
+                                </div>
                                 <p class="prix">20€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                     </div>
                     <div id="plats">
                         <h2 class="repas">plats</h2>
                         <div class="assiette">
-                            <h3>Coquilles Saint-Jacques</h3>
-                            <div class="assiette_description">
-                                <p>Accompagnées d'une purée de panais</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Coquilles Saint-Jacques</h3>
+                                    <p>Accompagnées d'une purée de panais</p>
+                                </div>
                                 <p class="prix">40€</p>
                             </div>
-                        </div>
-                        <div class="assiette">
-                            <h3>Magret de canard</h3>
-                            <div class="assiette_description">
-                                <p>Et parmentier de pommes de terre</p>
-                                <p class="prix">35€</p>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                            <div class="assiette_description">
-                                <p>Sur son lit de gnocchis aux légumes</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Magret de canard</h3>
+                                    <p>Et parmentier de pommes de terre</p>
+                                </div>
+                                <p class="prix">35€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                                    <p>Sur son lit de gnocchis aux légumes</p>
+                                </div>
                                 <p class="prix">44€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                     </div>
                     <div id="desserts">
                         <h2 class="repas">desserts</h2>
                         <div class="assiette">
-                            <h3>Pétales de violettes glacés</h3>
-                            <div class="assiette_description">
-                                <p>Et purée de noisettes</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Pétales de violettes glacés</h3>
+                                    <p>Et purée de noisettes</p>
+                                </div>
                                 <p class="prix">18€</p>
                             </div>
-                        </div>
-                        <div class="assiette">
-                            <h3>Fondant au chocolat</h3>
-                            <div class="assiette_description">
-                                <p>Revisité</p>
-                                <p class="prix">22€</p>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Millefeuille croustillant</h3>
-                            <div class="assiette_description">
-                                <p>Myrtilles et pâte d’amande</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Fondant au chocolat</h3>
+                                    <p>Revisité</p>
+                                </div>
+                                <p class="prix">22€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Millefeuille croustillant</h3>
+                                    <p>Myrtilles et pâte d’amande</p>
+                                </div>
                                 <p class="prix">23€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                     </div>
