--- a/html/La note enchantée.html
+++ b/html/La note enchantée.html
@@ -31,79 +31,129 @@
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
                         <div class="assiette">
-                            <h3>Ravioles de foie gras</h3>
-                            <div class="assiette_description">
-                                <p>Accompagnés de leur crème à la truffe</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Ravioles de foie gras</h3>
+                                    <p>Accompagnés de leur crème à la truffe</p>
+                                </div>
                                 <p class="prix">25€</p>
                             </div>
-                        </div>
-                        <div class="assiette">
-                            <h3>Caviar osciètre</h3>
-                            <div class="assiette_description">
-                                <p>Sur blini à la farine de blé noir</p>
-                                <p class="prix">35€</p>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Homard et espuma de potiron</h3>
-                            <div class="assiette_description">
-                                <p>Mariné aux zestes d'orange</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Caviar osciètre</h3>
+                                    <p>Sur blini à la farine de blé noir</p>
+                                </div>
+                                <p class="prix">35€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Homard et espuma de potiron</h3>
+                                    <p>Mariné aux zestes d'orange</p>
+                                </div>
                                 <p class="prix">20€</p>
                             </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
+                            </div>
                         </div>
                         <div class="assiette">
-                            <h3>Foie gras de canard cuit entier</h3>
-                            <div class="assiette_description">
-                                <p>Confiture de figue et pain toasté</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Foie gras de canard cuit entier</h3>
+                                    <p>Confiture de figue et pain toasté</p>
+                                </div>
                                 <p class="prix">35€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                     </div>
                     <div id="plats">
                         <h2 class="repas">plats</h2>
                         <div class="assiette">
-                            <h3>Noix de coquilles Saint-Jacques</h3>
-                            <div class="assiette_description">
-                                <p>Sur lit de purée de céleri-rave</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Noix de coquilles Saint-Jacques</h3>
+                                    <p>Sur lit de purée de céleri-rave</p>
+                                </div>
                                 <p class="prix">40€</p>
                             </div>
-                        </div>
-                        <div class="assiette">
-                            <h3>Langoustine poêlée</h3>
-                            <div class="assiette_description">
-                                <p>Purée de patate douce</p>
-                                <p class="prix">35€</p>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Mijoté de queue de boeuf</h3>
-                            <div class="assiette_description">
-                                <p>Et riz sauvage aux zestes de citron</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Langoustine poêlée</h3>
+                                    <p>Purée de patate douce</p>
+                                </div>
+                                <p class="prix">35€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Mijoté de queue de boeuf</h3>
+                                    <p>Et riz sauvage aux zestes de citron</p>
+                                </div>
                                 <p class="prix">44€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                     </div>
                     <div id="desserts">
                         <h2 class="repas">desserts</h2>
                         <div class="assiette">
-                            <h3>Macaron noisette et chocolat</h3>
-                            <div class="assiette_description">
-                                <p>Glace au caramel brun et sel de Guérande</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Macaron noisette et chocolat</h3>
+                                    <p>Glace au caramel brun et sel de Guérande</p>
+                                </div>
                                 <p class="prix">18€</p>
                             </div>
-                        </div>
-                        <div class="assiette">
-                            <h3>Baba au rhum revisité</h3>
-                            <div class="assiette_description">
-                                <p>Avec son coulis de citron</p>
-                                <p class="prix">22€</p>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                         <div class="assiette">
-                            <h3>Tarte au citron meringuée</h3>
-                            <div class="assiette_description">
-                                <p>Déstructurée</p>
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Baba au rhum revisité</h3>
+                                    <p>Avec son coulis de citron</p>
+                                </div>
+                                <p class="prix">22€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
+                            </div>
+                        </div>
+                        <div class="assiette">
+                            <div class="assiette_titre_description">
+                                <div class="assiette_description">
+                                    <h3>Tarte au citron meringuée</h3>
+                                    <p>Déstructurée</p>
+                                </div>
                                 <p class="prix">23€</p>
+                            </div>
+                            <div class="coche">
+                                <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
                     </div>
