ajout de l'animation sur le check menus

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <h2>Fonctionnement</h2>
                 <nav>
                     <ul>
-                        <a href="#"><li class="choix"><i class="fa-solid fa-1"></i><i class="fa-solid fa-mobile-screen-button choix_icon"></i>Choisissez un restaurant</li></a>
-                        <a href="#"><li class="choix"><i class="fa-solid fa-2"></i><i class="fa-solid fa-list choix_icon"></i>Composez votre menu</li></a>
-                        <a href="#"><li class="choix"><i class="fa-solid fa-3"></i><i class="fa-solid fa-store choix_icon"></i>Dégustez au restaurant</li></a>
+                        <a href="#restaurant"><li class="choix"><i class="fa-solid fa-1"></i><i class="fa-solid fa-mobile-screen-button choix_icon"></i>Choisissez un restaurant</li></a>
+                        <li class="choix"><i class="fa-solid fa-2"></i><i class="fa-solid fa-list choix_icon"></i>Composez votre menu</li>
+                        <li class="choix"><i class="fa-solid fa-3"></i><i class="fa-solid fa-store choix_icon"></i>Dégustez au restaurant</li>
                     </ul>
                 </nav>
             </div>
@@ -45,7 +45,7 @@
 
         <section>
             <div id="section_restaurant">
-                <h2>Restaurants</h2>
+                <h2 id="restaurant">Restaurants</h2>
                 <div id="section_restaurant_1_2">
                     <figure id="restaurant_1">
                         <a href="./html/La palette du goût.html">
