ajout de l'animation sur la carte des plats

--- a/html/La note enchantée.html
+++ b/html/La note enchantée.html
@@ -30,7 +30,7 @@
                     </div>
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
-                        <div class="assiette">
+                        <div class="assiette assiette_1">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Ravioles de foie gras</h3>
@@ -42,7 +42,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_2">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Caviar osciètre</h3>
@@ -54,7 +54,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_3">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Homard et espuma de potiron</h3>
@@ -66,7 +66,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_4">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Foie gras de canard cuit entier</h3>
@@ -81,7 +81,7 @@
                     </div>
                     <div id="plats">
                         <h2 class="repas">plats</h2>
-                        <div class="assiette">
+                        <div class="assiette assiette_1">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Noix de coquilles Saint-Jacques</h3>
@@ -93,7 +93,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_2">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Langoustine poêlée</h3>
@@ -105,7 +105,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_3">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Mijoté de queue de boeuf</h3>
@@ -120,7 +120,7 @@
                     </div>
                     <div id="desserts">
                         <h2 class="repas">desserts</h2>
-                        <div class="assiette">
+                        <div class="assiette assiette_1">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Macaron noisette et chocolat</h3>
@@ -132,7 +132,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_2">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Baba au rhum revisité</h3>
@@ -144,7 +144,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_3">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Tarte au citron meringuée</h3>
