--- a/html/La palette du goût.html
+++ b/html/La palette du goût.html
@@ -30,7 +30,7 @@
                     </div>
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
-                        <div class="assiette">
+                        <div class="assiette assiette_1">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Fricassée d'escargot</h3>
@@ -42,7 +42,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_2">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Foie gras de canard mi-cuit</h3>
@@ -54,7 +54,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_3">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Œuf au plat</h3>
@@ -69,7 +69,7 @@
                     </div>
                     <div id="plats">
                         <h2 class="repas">plats</h2>
-                        <div class="assiette">
+                        <div class="assiette assiette_1">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Filet de boeuf aux herbes</h3>
@@ -81,7 +81,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_2">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Parmentier de queue de boeuf</h3>
@@ -93,7 +93,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_3">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Filet de turbot</h3>
@@ -108,7 +108,7 @@
                     </div>
                     <div id="desserts">
                         <h2 class="repas">desserts</h2>
-                        <div class="assiette">
+                        <div class="assiette assiette_1">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Paris-Brest</h3>
@@ -120,7 +120,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_2">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Macaron au chocolat d'exception</h3>
@@ -132,7 +132,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_3">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Mousse au chocolat</h3>
