--- a/html/A la française.html
+++ b/html/A la française.html
@@ -30,7 +30,7 @@
                     </div>
                     <div id="entrees">
                         <h2 class="repas">entrées</h2>
-                        <div class="assiette">
+                        <div class="assiette assiette_1">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Tartare de poulpe acidulé</h3>
@@ -42,7 +42,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_2">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Velouté de légumes d'antan</h3>
@@ -54,7 +54,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_3">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Soupe à l'oignon</h3>
@@ -69,7 +69,7 @@
                     </div>
                     <div id="plats">
                         <h2 class="repas">plats</h2>
-                        <div class="assiette">
+                        <div class="assiette assiette_1">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Coquilles Saint-Jacques</h3>
@@ -81,7 +81,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_2">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Magret de canard</h3>
@@ -93,7 +93,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_3">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Pigeonneau d’Ille-et-Vilaine</h3>
@@ -108,7 +108,7 @@
                     </div>
                     <div id="desserts">
                         <h2 class="repas">desserts</h2>
-                        <div class="assiette">
+                        <div class="assiette assiette_1">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Pétales de violettes glacés</h3>
@@ -120,7 +120,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_2">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Fondant au chocolat</h3>
@@ -132,7 +132,7 @@
                                 <i class="fa-solid fa-check valider"></i>
                             </div>
                         </div>
-                        <div class="assiette">
+                        <div class="assiette assiette_3">
                             <div class="assiette_titre_description">
                                 <div class="assiette_description">
                                     <h3>Millefeuille croustillant</h3>
