modification du lien contact

--- a/html/Le délice des sens.html
+++ b/html/Le délice des sens.html
@@ -167,7 +167,7 @@
                     <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
                     <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
                     <li>Mentions légales</li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="mailto:homyfood@gmail.com">Contact</a></li>
                 </ul>
             </div>
         </footer>
